--- a/index.html
+++ b/index.html
@@ -48,5 +48,5 @@
 
   <button type="submit">Buy Now</button>
 </form>
-Merchant_ID:31550493
-Merchant_Key:hnmgj5xzqkbsf
+Merchant ID: 31550493
+Merchant Key: hnmgj5xzqkbsf
