--- a/index.html
+++ b/index.html
@@ -48,5 +48,6 @@
 
   <button type="submit">Buy Now</button>
 </form>
-Merchant ID: 31550493
-Merchant Key: hnmgj5xzqkbsf
+Merchant_ID: 31550493
+Merchant_Key: hnmgj5xzqkbsf
+<img src="images/jerseys/manu.jpg" alt="Manchester United Jersey">
